# bacdive

./: Cargo.toml  README.md
src/: args.rs  designation.rs  designationlist.rs  idlist.rs  idsearch.rs  idwrite.rs  main.rs  species.rs  specieslist.rs  specieswrite.rs  strain.rs  strainheader.rs  strainnumber.rs  strainwrite.rs  uniqueid.rs  uniquespecies.rs  uniquestrain.rs  webmine.rs
